# repository-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cache-cleanup.yml  tests.yml
.github/workflows/basic-tests/: action.yml
.github/workflows/build-projects/: action.yml
.github/workflows/restore-cache/: action.yml
.github/workflows/setup-test-job/: action.yml
.github/workflows/tests-build-action/: action.yml
project/{{ cookiecutter.project_slug }}/.ci/: flake8.sh  test.sh
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.ci/: stripped_notebooks_check.sh
{{ cookiecutter.project_slug }}/.hooks/: isort.sh
{{ cookiecutter.project_slug }}/tests/: test_tests.py
{{ cookiecutter.repo_name }}/: .flake8  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.ci/: isort.sh
{{ cookiecutter.repo_name }}/.github/workflows/: codeql.yml  tests.yml
{{ cookiecutter.repo_name }}/tests/: test_tests.py
